Finished display results
Cleaned up event listener code
-split up functions for checking winner, resetting scores, and displaying results

--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     background-color: beige;
 }
 
+.result-display {
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 .button-78 {
   align-items: center;
